# ruststep

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  markdown-link-check.json  search-index.js  settings.html  source-files.js
espr/: Cargo.toml  all.html  index.html  macro.derive_ast_component!.html  macro.derive_ast_component.html  sidebar-items.js
espr-derive/: Cargo.toml
espr-derive/src/: lib.rs
espr/ast/: enum.AggregationOption.html  enum.AttributeDecl.html  enum.BinaryOperator.html  enum.BuiltInConstant.html  enum.BuiltInFunction.html  enum.Constraint.html  enum.Declaration.html  enum.Expression.html  enum.Extensibility.html  enum.FunctionCallName.html  enum.InterfaceSpec.html  enum.IntervalOperator.html  enum.Literal.html  enum.Logical.html  enum.ProcedureCallName.html  enum.QualifiableFactor.html  enum.Qualifier.html  enum.RelationOperator.html  enum.SimpleType.html  enum.Statement.html  enum.SuperTypeExpression.html  enum.Type.html  enum.UnaryOperator.html  index.html  sidebar-items.js  struct.Bound.html  struct.Constant.html  struct.DeriveClause.html  struct.DerivedAttribute.html  struct.DomainRule.html  struct.Element.html  struct.Entity.html  struct.EntityAttribute.html  struct.EntityBody.html  struct.FormalParameter.html  struct.Function.html  struct.InverseAttribute.html  struct.InverseClause.html  struct.LocalVariable.html  struct.Procedure.html  (+15 more)
espr/ast/algorithm/: enum.Declaration.html  enum.InterfaceSpec.html  enum.ProcedureCallName.html  enum.Statement.html  struct.Constant.html  struct.DomainRule.html  struct.FormalParameter.html  struct.Function.html  struct.LocalVariable.html  struct.Procedure.html  struct.RepeatControl.html  struct.Rule.html  (+2 more)
espr/codegen/: index.html  sidebar-items.js
espr/express/: test.exp
espr/ir/: enum.ConstraintExpr.html  enum.Named.html  enum.ScopeType.html  enum.SemanticError.html  enum.TypeDecl.html  enum.TypeRef.html  fn.gather_constraint_expr.html  index.html  sidebar-items.js  struct.Bound.html  struct.Constraints.html  struct.Entity.html  struct.EntityAttribute.html  struct.Enumeration.html  struct.IR.html  struct.Instantiables.html  struct.Namespace.html  struct.PartialComplexEntity.html  struct.Path.html  struct.Rename.html  struct.Schema.html  struct.Scope.html  struct.Select.html  struct.Simple.html  struct.SimpleType.html  trait.Legalize.html
espr/parser/: constant.KEYWORDS.html  fn.abstract_entity_declaration.html  fn.abstract_supertype.html  fn.abstract_supertype_declaration.html  fn.actual_parameter_list.html  fn.add_like_op.html  fn.aggregate_initializer.html  fn.aggregate_source.html  fn.aggregate_type.html  fn.aggregation_types.html  fn.algorithm_head.html  fn.alias_stmt.html  fn.array_type.html  fn.assignment_stmt.html  fn.attribute_decl.html  fn.attribute_id.html  fn.attribute_qualifier.html  fn.attribute_ref.html  fn.bag_type.html  fn.binary_type.html  fn.boolean_type.html  fn.bound_1.html  fn.bound_2.html  fn.bound_spec.html  fn.built_in_constant.html  fn.built_in_function.html  fn.built_in_procedure.html  fn.case_action.html  fn.case_label.html  fn.case_stmt.html  fn.compound_stmt.html  fn.concrete_types.html  fn.constant_body.html  fn.constant_decl.html  fn.constant_factor.html  fn.constant_id.html  fn.constant_ref.html  fn.constructed_types.html  fn.declaration.html  fn.derive_clause.html  (+165 more)
espr/semantics/: struct.IR.html
espr/src/: decode.rs  error.rs  lib.rs  semantics.rs
espr/tests/: .list.rs.pending-snap  README.md  any.rs  decode.rs  entity.rs  generic.rs  list.rs  logical_literal.rs  reserved.rs  simple.rs  sub-super-types.rs  subsuper.rs  try_generate.rs  type_decl.rs
exp2rs/: .gitignore  Cargo.toml
exp2rs/src/: decode.rs  lib.rs  main.rs  parser.rs  types.rs
exp2rs/tests/: decode.rs
ruststep/: Cargo.toml  all.html  derive.Deserialize.html  derive.Holder.html  derive.TableInit.html  index.html  macro.as_holder!.html  macro.as_holder.html  sidebar-items.js
ruststep-derive/: Cargo.toml
ruststep-derive/src/: common.rs  entity.rs  field_type.rs  for_struct.rs  holder_attr.rs  lib.rs  select.rs  table_init.rs  type_decl.rs
ruststep-derive/tests/: try_build.rs
ruststep/ap201/: index.html  sidebar-items.js
ruststep/ap203/: index.html  sidebar-items.js
ruststep/ast/: enum.AnchorItem.html  enum.EntityInstance.html  enum.Name.html  enum.Parameter.html  index.html  sidebar-items.js  struct.Anchor.html  struct.DataSection.html  struct.Exchange.html  struct.Record.html  struct.ReferenceEntry.html  struct.SubSuperRecord.html  struct.URI.html  trait.AST.html
ruststep/error/: enum.Error.html  index.html  sidebar-items.js  struct.TokenizeFailed.html  type.Result.html
ruststep/examples/: ap000_read.rs
ruststep/header/: index.html  sidebar-items.js  struct.FileDescription.html  struct.FileName.html  struct.FileSchema.html  struct.Header.html
ruststep/manual_codegen_test/: index.html  sidebar-items.js  struct.A.html  struct.AEntry.html  struct.ARef.html  struct.Ap000.html  struct.B.html  struct.BEntry.html  struct.BRef.html  struct.C.html  struct.CEntry.html  struct.CRef.html
ruststep/parser/: fn.parse.html  fn.parse_header.html  index.html  sidebar-items.js
ruststep/primitive/: enum.Logical.html  index.html  sidebar-items.js
ruststep/src/: ap000.rs  ap201.rs  ap203.rs  array.rs  error.rs  example_test_schema.rs  header.rs  lib.rs  logical.rs  manual_codegen_test.rs  place_holder.rs  serde.rs  tables.rs
ruststep/tables/: enum.PlaceHolder.html  fn.get_owned.html  fn.insert_record.html  fn.owned_iter.html  index.html  sidebar-items.js  struct.Id.html  trait.Entity.html  trait.EntityRef.html  trait.EntityTable.html  trait.EntryTable.html  trait.Holder.html  trait.IntoOwned.html  trait.TableEntry.html  trait.TableInit.html  trait.WithVisitor.html  type.Table.html
ruststep/tests/: abc_dataset.rs  any.rs  any_deserialize.rs  ap201.rs  array.rs  bool_logical_deserialize.rs  entity.rs  enum_deserialize.rs  holder.rs  list.rs  optional.rs  recursive_select.rs  simple.rs  subsuper.rs  type_decl.rs
(+3161 files in other folders)
