[package]
name = "espr-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.28"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }

[dependencies.espr]
version = "0.2.0"
path = "../espr"

[dev-dependencies]
ruststep = { version = "0.1.0", path = "../ruststep" }
ruststep-derive = { version = "0.1.0", path = "../ruststep-derive" }
serde = "1.0"
derive-new = "0.5.9"
