[package]
name = "espr-derive"
version = "0.3.0"
edition = "2021"
authors = ["Toshiki Teramura <teramura@ricos.co.jp"]

description   = "Procedual macro for running espr compiler"
documentation = "https://ricosjp.github.io/ruststep/espr_derive/index.html"
repository    = "https://github.com/ricosjp/ruststep"
keywords      = ["step", "cad", "compiler", "proc-macro"]
license       = "Apache-2.0"
readme        = "../README.md"
categories    = ["science", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.17"
proc-macro2 = "1.0.37"
syn = { version = "2.0.8", features = ["full", "extra-traits"] }

[dependencies.espr]
version = "0.3.0"
path = "../espr"

[dev-dependencies]
ruststep = { version = "0.3.0", path = "../ruststep" }
ruststep-derive = { version = "0.3.0", path = "../ruststep-derive" }
serde = "1.0.136"
derive-new = "0.5.9"
