[package]
name = "espr"
version = "0.3.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Toshiki Teramura <teramura@ricos.co.jp"]
edition = "2021"
rust-version = "1.56.0"

description   = "EXPRESS Language compiler"
documentation = "https://ricosjp.github.io/ruststep/espr/index.html"
repository    = "https://github.com/ricosjp/ruststep"
keywords      = ["step", "cad", "compiler"]
license       = "Apache-2.0"
readme        = "../README.md"
categories    = ["science", "development-tools"]

[dependencies]
# For parser
nom = "7.1.3"

# For Rust code generation
syn = "2.0.56"
quote = "1.0.37"
proc-macro2 = "1.0.86"

# Utilities
Inflector = "0.11.4"
derive_more = "0.99.18"
itertools = "0.10.5"
maplit = "1.0.2"
thiserror = "1.0.63"
structopt = "0.3.26"
check_keyword = "0.2.0"
katexit = "0.1.4"

[dev-dependencies]
insta = "1.39.0"
maplit = "1.0.2"
