[package]
name = "ruststep-derive"
version = "0.3.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"

description   = "proc-macro for ruststep"
documentation = "https://ricosjp.github.io/ruststep/ruststep_derive/index.html"
repository    = "https://github.com/ricosjp/ruststep"
keywords      = ["step", "cad", "proc-macro"]
license       = "Apache-2.0"
readme        = "../README.md"
categories    = ["science", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
proc-macro2 = "1.0.53"
syn = { version = "2.0.9", features = ["full", "extra-traits"] }
proc-macro-crate = "1.2.1"
Inflector = "0.11.4"
proc-macro-error = "1.0.4"

[dev-dependencies]
serde = "1.0.158"
trybuild = "1.0.80"
insta = "1.29.0"

[dev-dependencies.ruststep]
path = "../ruststep"

[dev-dependencies.espr]
path = "../espr"
