[package]
name = "ruststep"
version = "0.1.0"
authors = ["Toshiki Teramura <teramura@ricos.co.jp>", "Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
rust-version = "1.56.0"

description   = "A STEP toolkit for Rust"
documentation = "https://ricosjp.github.io/ruststep/ruststep/index.html"
repository    = "https://github.com/ricosjp/ruststep"
keywords      = ["step", "cad", "file-format"]
license       = "Apache-2.0"
readme        = "../README.md"
categories    = ["science"]

[features]
default = []
ap201 = []

[dependencies]
derive-new = "0.5.9"
nom = "7.0.0"
serde = { version = "1.0.129", features = ["derive"] }
thiserror = "1.0.26"
Inflector = "0.11.4"
itertools = "0.10.1"

[dependencies.ruststep-derive]
path = "../ruststep-derive"
version = "0.1.0"

[dev-dependencies]
anyhow = "1.0.43"

[dev-dependencies.espr-derive]
path = "../espr-derive"
version = "0.1.0"

[package.metadata.release]
no-dev-version = true
