[package]
name = "ruststep"
version = "0.3.0"
authors = ["Toshiki Teramura <teramura@ricos.co.jp>", "Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
rust-version = "1.56.0"

description   = "A STEP toolkit for Rust"
documentation = "https://ricosjp.github.io/ruststep/ruststep/index.html"
repository    = "https://github.com/ricosjp/ruststep"
keywords      = ["step", "cad", "file-format"]
license       = "Apache-2.0"
readme        = "../README.md"
categories    = ["science"]

[features]
default = []
ap201 = []
ap203 = []

[dependencies]
derive_more = "0.99.18"
derive-new = "0.5.9"
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
Inflector = "0.11.4"
itertools = "0.10.5"

[dependencies.ruststep-derive]
path = "../ruststep-derive"
version = "0.3.0"

[dev-dependencies]
anyhow = "1.0.89"
maplit = "1.0.2"

[dev-dependencies.espr-derive]
path = "../espr-derive"
version = "0.3.0"
